--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body bgcolor="pink">
     <h1 style="font-size: 90px;" align="center">GHASIARA VIDYAPITH</h1>
     <marquee behavior="scroll" direction="left">
-        <img src="activity1.jpg" height="300" alt="">
-        <img src="activity2.jpg" height="300" alt="">
-        <img src="activity3.jpg" height="300" alt="">
+        <img src="images/activity1.jpg" height="300" alt="">
+        <img src="images/activity2.jpg" height="300" alt="">
+        <img src="images/activity3.jpg" height="300" alt="">
     </marquee>
     <br>
     <ul>
