--- a/activity.html
+++ b/activity.html
@@ -12,19 +12,19 @@
     <ul>
         <li>Sports Events</li>
         <p>Our students participate in various sports competitions throughout the year.</p>
-        <img src="sports.jpg" alt="Sports Events">
+        <img src="images/sports.jpg" alt="Sports Events">
         <li>Cultural Programs</li>
         <p>We celebrate various cultural events to promote diversity and inclusion.</p>
-        <img src="cultural.jpg" alt="Cultural Programs">
+        <img src="images/cultural.jpg" alt="Cultural Programs">
         <li>Science Fairs</li>
         <p>Students showcase their scientific projects and experiments.</p>
-        <img src="science.jpg" alt="Science Fairs">
+        <img src="images/science.jpg" alt="Science Fairs">
         <li>Art Competitions</li>
         <p>Our school organizes art competitions to encourage creativity.</p>
-        <img src="art.jpg" alt="Art Competitions">
+        <img src="images/art.jpg" alt="Art Competitions">
         <li>Field Trips</li>
         <p>Educational field trips are arranged to enhance learning experiences.</p>
-        <img src="field_trip.jpg" alt="Field Trips">
+        <img src="images/field_trip.jpg" alt="Field Trips">
     </ul>
 </body>
 
