--- a/headmasters_note.html
+++ b/headmasters_note.html
@@ -6,7 +6,7 @@
 
 <body bgcolor="lightyellow">
     <h1 style="font-size: 90px;" align="center">GHASIARA VIDYAPITH</h1>
-    <img align="center" src="activity2.jpg" alt="Headmaster's Image">
+    <img align="center" src="images/activity2.jpg" alt="Headmaster's Image">
 
 
     <h2 align="center">Headmaster's Note</h2>
