--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
     </marquee>
     <br>
     <ul>
-        <li> <a href="admission.html">Admission</a> </li>
-        <li> <a href="department.html">Department</a> </li>
-        <li> <a href="activity.html">Activity</a> </li>
-        <li> <a href="headmasters_note.html">Headmaster's Note</a> </li>
+        <li>
+            <h1> <a href="admission.html">Admission</a> </h1>
+        </li>
+        <li>
+            <h1> <a href="department.html">Department</a> </h1>
+        </li>
+        <li>
+            <h1> <a href="activity.html">Activity</a> </h1>
+        </li>
+        <li>
+            <h1> <a href="headmasters_note.html">Headmaster's Note</a> </h1>
+        </li>
     </ul>
 </body>
 
